--- a/index1.jade
+++ b/index1.jade
@@ -17,17 +17,15 @@ html
       ----
 
       ***YOLO*** **hi** 
-    <img src="https://s-media-cache-ak0.pinimg.com/236x/4a/22/ab/4a22ab0e593603475984f109b8b0c6f1.jpg">
-    <img src="http://i.imgur.com/tc28w46.gif">
-    <p>360 noscoped ya m8</p>
-    <pre class="language-python">
-      <code class="language-python line-numbers-row">
-        print('yo wattup')
-      </code>
-    </pre>
-    <img src="https://38.media.tumblr.com/83b1abdd37a272c76d5a50b31a91b3b5/tumblr_mu0i4hw4UE1s837teo7_500.gif">
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js")
-    <p>2spooky4me</p>
-    <p>AND IIIIIIIIIIIIIIIIIII WILL ALWAYS be obsessed with green day because the day you are having a day today is green day.</p>
-  </body>
+      
+      *megyk* shhchooal  besh
 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/fOG1gNq1wfE" frameborder="0" allowfullscreen></iframe>
+
+      <img src="https://cdn2.scratch.mit.edu/get_image/gallery/1135716_200x130.png?v=1429187455.74">
+
+      **Am I a potato or NOT** I HAVE NO IDEA, I AM SCARED FOR MY LIFE AND SHOULD BUY A BOAT
+
+      ```python
+      print('how am I today?')
+      ```
