--- a/index1.jade
+++ b/index1.jade
@@ -22,8 +22,9 @@ html
 
 
       <img src="https://cdn2.scratch.mit.edu/get_image/gallery/1135716_200x130.png?v=1429187455.74">
-
-      **Am I a potato or NOT** I HAVE NO IDEA, I AM SCARED FOR MY LIFE AND SHOULD BUY A BOAT
+      <img src="http://files.gamebanana.com/img/ico/sprays/heavy_reaction.png">   
+     
+     **Am I a potato or NOT** I HAVE NO IDEA, I AM SCARED FOR MY LIFE AND SHOULD BUY A BOAT
 
       ```python
       print('how am I today?')
