--- a/index1.jade
+++ b/index1.jade
@@ -20,6 +20,7 @@ html
       
       *megyk* shhchooal  besh
 
+      <img src="http://i0.kym-cdn.com/photos/images/newsfeed/000/146/506/sonic_derp.PNG">
 
       <img src="https://cdn2.scratch.mit.edu/get_image/gallery/1135716_200x130.png?v=1429187455.74"> 
      
