--- a/index1.jade
+++ b/index1.jade
@@ -29,3 +29,5 @@ html
       ```python
       print('how am I today?')
       ```
+
+      script(src='//code.jquery.com/jquery-1.11.3.min.js')      
