--- a/index1.jade
+++ b/index1.jade
@@ -6,6 +6,7 @@ html
     link(href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css" rel="stylesheet")
     script(src="main.js")
     link(href="solarized-dark.css" rel="stylesheet")
+    script(src='//code.jquery.com/jquery-migrate-1.2.1.min.js')
   body
     :markdown
       # dang, this website is sexy
@@ -30,4 +31,4 @@ html
       print('how am I today?')
       ```
 
-      script(src='//code.jquery.com/jquery-1.11.3.min.js')      
+            
