--- a/_layout.jade
+++ b/_layout.jade
@@ -4,6 +4,9 @@ html
     title Insanis's Blog
     link(href="main.css" rel="stylesheet")
   body
-    p This is Insanis's very geeky blog. As expected, this website is geeky.
+    #Header
+        h1 Insanis's Blog
+        p This is a blog about different random stuff. From games, to reviews, just stuff. 
+        hr
     != yield
     
