--- a/_layout.jade
+++ b/_layout.jade
@@ -5,8 +5,26 @@ html
     link(href="main.css" rel="stylesheet")
   body
     #Header
+        img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbbsz-0C75EwAjPatplDczKzAoWlSgXOzlsOmvf3jm_bOMc8dpOKLiMw')
         h1 Insanis's Blog
         p This is a blog about different random stuff. From games, to reviews, just stuff. 
         hr
-    != yield
-    
+
+    .posts
+        != yield
+    .credit
+      p All blogs go credit to whoever wrote the blogs.
+    #disqus_thread
+      script(type='text/javascript').
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'insanisblog';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      noscript
+        | Please enable JavaScript to view the 
+        a(href='https://disqus.com/?ref_noscript', rel='nofollow') comments powered by Disqus.
+
