--- a/main.styl
+++ b/main.styl
@@ -1,6 +1,14 @@
-body
+*
   background #3399FF
   font-family "Orbitron"
 
 #Header
   text-align center
+
+.posts
+  text-align center
+  border 3px solid black
+
+.credit
+  text-align center
+  font-size 10px
